tests/basic/check/not_iff/120.pan.out
tests/basic/check/not_iff/120.pan:4:1-5: error: cannot solve constraints of f120
tests/basic/check/not_iff/120.pan:7:1-5: error: cannot solve constraints of f121
tests/basic/check/not_iff/120.pan:10:1-5: error: cannot solve constraints of f122
tests/basic/check/not_iff/120.pan:13:1-5: error: cannot solve constraints of f123